app/scss/header/_header.scss
.header {

	position: relative;
	
	.navbar {
		width: 100%;
		height: 80px;
		display: flex;
		align-items: center;
		justify-content: space-between;
	
		@media (max-width: 768px) {
			height: 60px;
		}
	}

	&-content {
		
		height: 110vh;

		display: flex;
		flex-direction: column;

	}

	.logo {
		width: 176px;
		height: 52px;
		display: block;
		background: url('../images/dest/logo.svg') no-repeat;

		@media screen and (max-width: 768px) {
			width: 142px;
			height: 42px;
			background-size: cover;
		}

		@media (max-width: 576px) {
			height: 35px;
			background-size: contain;
		}
	}

	&__title {
		font-size: 70px;
		line-height: 80px;
		font-weight: 900;
		text-align: center;

        flex: 0 0 15%;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-wrap: wrap;
        align-content: center;

        gap: 10px;

		@media screen and (max-width: 1200px) {
			font-size: 60px;
			line-height: 70px;
		}

		@media screen and (max-width: 990px) {
			font-size: 50px;
			line-height: 60px;
		}

		@media screen and (max-width: 768px) {
			font-size: 40px;
			line-height: 50px;
			flex: 0 0 20%;
		}

		@media (max-width: 576px) {
			font-size: 35px;
	        line-height: 40px;
	        gap: 0px;
		}

		span {

			@media (max-width: 576px) {
				display: block;
				width: 100%;
			}
		}
	}

	.header-image-box {
		width: 100%;
		flex: 1 0 85%;

		@media screen and (max-width: 768px) {
			width: 100vw;
			flex: 1 0 80%;
			margin-left: -20px;
		}

		@media screen and (max-width: 576px) {
			margin-left: -15px;
		}
	}

	&-image {
		
		width: 100%;
		height: 100%;
		object-fit: cover;
		opacity: .9;
	}
}



@import 'burger';
@import 'header_menu';

